<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person"
            android:title="@string/my_pofile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info"
            android:title="@string/about_us" />
    </group>

    <group>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faq"
            android:title="@string/faqs" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/tcs"
            android:title="@string/terms_and_conditions"/>

    </group>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>