<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_local_mall"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offer"
        android:title="@string/offers" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/nav_cart"
        android:title="@string/basket" />
</menu>