<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.verityfoods.ui.bottomviews.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.verityfoods.ui.account.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.verityfoods.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.verityfoods.ui.orders.OrdersFragment"
        android:label="Orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.verityfoods.ui.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.verityfoods.ui.bottomviews.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.verityfoods.ui.bottomviews.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.verityfoods.ui.bottomviews.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.verityfoods.ui.bottomviews.offers.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.verityfoods.ui.bottomviews.basket.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.verityfoods.ui.products.ProductsFragment"
        android:label="Products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_sub_category"
        android:name="com.verityfoods.ui.products.SubCategoriesFragment"
        android:label="Sub Category"
        tools:layout="@layout/fragment_sub_categories" />

</navigation>