<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.settings.SettingsFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_search" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_here" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/dealsSliderLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/sliding_deals_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slidinDeals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/colorPrimaryDark"
                app:sliderIndicatorUnselectedColor="@android:color/darker_gray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/imageSliderLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dealsSliderLayout">

            <ProgressBar
                android:id="@+id/sliding_image_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/colorPrimaryDark"
                app:sliderIndicatorUnselectedColor="@android:color/darker_gray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shop_now_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/shop_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageSliderLayout" />

        <LinearLayout
            android:id="@+id/shop_by"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/search_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_now_btn" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/shop_by_category" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                app:srcCompat="@drawable/ic_keyboard_arrow_down" />

        </LinearLayout>

        <include
            layout="@layout/category_grid"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/layout_shop_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_by"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
